@@ -1,3 +1,13 @@
+2004-02-02  Paolo Carlini  <pcarlini@suse.de>
+
+	PR libstdc++/13976
+	* include/ext/malloc_allocator.h (malloc_allocator::allocate,
+	deallocate): Make the second parameter unnamed, to void unused
+	parameter warnings.
+	* include/ext/mt_allocator.h (__mt_alloc::allocate): Ditto.
+	* include/ext/new_allocator.h (new_allocator::allocate,
+	deallocate): Ditto.
+
 2004-01-27  Paolo Carlini  <pcarlini@suse.de>
 
 	* config/locale/generic/c_locale.cc: Fix throw messages
